# PROPFIRM

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSE_COMPLETE_PROJET.md  ANALYSE_FICHIERS_SUPPRESSION.md  ANALYSE_ROBOT_LIVE_27MAI.py  ANALYSE_SLTP_PROBLEME.md  ARCHITECTURE.md  AUDIT_ARCHITECTURE_COMPLET.md  BOT_CORRECTIONS_APPLIQUEES.md  CHANGELOG.md  DEPLOYMENT_RULES.md  DIAGNOSTIC_CHALLENGE_READINESS.md  DOCS_INCONSISTENCIES.md  Dockerfile  ENHANCED_ROBOT_README.md  EXECUTIVE_SUMMARY.md  EXPERT_ANALYSIS_INSTITUTIONAL.md  INGESTION_ISSUE.md  LIVE_PRODUCTION_IMPROVEMENTS.md  NOT_YET_IMPLEMENTED_ExprJoinedStr  OPERATIONAL_RULES.md  PRE_PRODUCTION_IMPROVEMENTS.md  PR_BODY.md  PR_DRAFT.md  PR_NOTES.md  RAPPORT_AMELIORATIONS_BOT.md  RAPPORT_ANALYSE_EN_LIVE_27MAI.md  RAPPORT_CORRECTIONS_FAIBLESSES.md  RAPPORT_CORRECTIONS_REELLES.md  RAPPORT_ERREURS_CORRIGEES.md  RAPPORT_FINAL_AUDIT_CORRECTIONS.md  RAPPORT_FINAL_CORRECTIONS.md  RAPPORT_INCOHERENCES_CRITIQUES.md  RAPPORT_REDEMARRAGE_26MAI.md  READINESS_FINAL_OPTIMIZED.md  README.md  README_MTF.md  (+78 more)
.githooks/: pre-commit.ps1
.github/: PR_AUTOMATION_SAFE.md
MT5_FTMO_IA/: __init__.py
PATCH_NOTES/: PR_BODY.md  pilot_auto_merge_PR.md
artifacts/: RAPPORT_FINAL_CORRECTIONS.md  RAPPORT_FINAL_CORRECTIONS_PROJET.md  backtest_quick_report.json  backtest_realistic_report.json  backtest_realistic_report_detailed.json  backtest_realistic_report_fixedsizing.json  backtest_report.json  backtest_threshold_sweep.json  ftmo_backtest_report.json  imports_diagnose.json  lightgbm_poc.txt  process_scan.json  (+11 more)
(+1863 files in other folders)
